@@ -5,12 +5,15 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Fix: Crate won't start properly if a plugin loading error occurs
+   (e.g. through a misconfigured plugin)
+
  - Updated crate-admin to 0.14.7 which includes following changes:
 
-   - fixed a bug that displays partitions that are not related to the selected 
+   - fixed a bug that displays partitions that are not related to the selected
      table in the table-list.
 
-   - fixed a bug where cluster shows wrong state if the number of nodes gets 
+   - fixed a bug where cluster shows wrong state if the number of nodes gets
      smaller than the minimum master nodes.
 
 2015/10/09 0.51.6
